frontend: update card display, backend: start card undertermined question logic, create htmlElems dictionary for easy access, frontend: changes using display none instead of visibility hidden, create startRound emit, add game.settings attribute, fix some general bugs

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 
 .page {
-  visibility: hidden;
+  /* visibility: hidden; */
+  display: none;
 }
